# ChangeLog for app-portage/gentoolkit
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-portage/gentoolkit/ChangeLog,v 1.324 2015/01/02 12:21:47 ago Exp $

  02 Jan 2015; Agostino Sarubbo <ago@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for sparc, wrt bug #530264

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for ppc, wrt bug #530264

  26 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for x86, wrt bug #530264

  23 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for alpha, wrt bug #530264

  16 Dec 2014; Markus Meier <maekke@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  arm stable, bug #530264

  09 Dec 2014; Jeroen Roovers <jer@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for HPPA (bug #530264).

  08 Dec 2014; Agostino Sarubbo <ago@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  Stable for ppc64, wrt bug #530264

  07 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> gentoolkit-0.3.0.9-r2.ebuild:
  amd64 stable wrt bug #530264

  18 Nov 2014; Michał Górny <mgorny@gentoo.org> gentoolkit-9999.ebuild:
  Switch to git-r3.

*gentoolkit-0.3.0.9-r2 (12 Nov 2014)

  12 Nov 2014; Paul Varner <fuzzyray@gentoo.org> +gentoolkit-0.3.0.9-r2.ebuild,
  gentoolkit-9999.ebuild, +files/0.3.0.9-equery-508114.patch,
  +files/0.3.0.9-revdep-rebuild-526400.patch,
  +files/0.3.0.9-equery-strip-XXXFLAGS.patch:
  Revision bump to add patches for the following:
  revdep-rebuild: Fix gawk warning. Bug 526400
  equery: strip leading '-' from CFLAGS, CXXFLAGS, LDFLAGS
  equery: Don't always print license field. Bug 508114
  Added Python 3.4 to PYTHON_COMPAT

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> gentoolkit-0.3.0.8-r2.ebuild,
  gentoolkit-0.3.0.9-r1.ebuild, gentoolkit-0.3.0.9.ebuild,
  gentoolkit-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-